# Allegro-TicTacToe

./: ASSESSMENT.md  CMakeLists.txt  README.md  SOLUTION.md
src/game/: board.c  board.h  game.c  game.h  main.c  resources.c  resources.h  utils.c  utils.h
